--- a/views/Lista.ejs
+++ b/views/Lista.ejs
@@ -3,8 +3,8 @@
 <body>
 
 <h1>Turnos Clientes</h1>
-<% if (isAdmin) { %>
-	<p> Remember to check your email every 24 hours! </p>
+<% if (clientes) { %>
+	<p> clientes </p>
 <% } %>
 
 </body>
